--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,7 +12,8 @@
     },
     "triggers": {
         "crons": [
-            "*/5 * * * *" // Every 5 minutes
+            "*/5 * * * *", // Every 5 minutes
+            "* * * * *", // every minute
         ]
     },
     /**
